# InFlux

./: .gitignore  README.md  docker-compose.yml  influx_project_state.txt  start-dev.sh
ai/: project_description.md
ai/agents/: manager.md  programmer.md  qa_tester.md  security.md  sribe.md
ai/workflows/: new_project.md  orchestrator.md
backend/: Cargo.toml  Dockerfile
backend/src/: lib.rs  main.rs
backend/tests/: integration_tests.rs  unit_tests.rs
backend/tests/common/: mod.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: StreamingComponent.tsx  layout.tsx  page.tsx
frontend/src/lib/: api.ts  spacetime.ts
frontend/src/test/: integration.test.tsx  setup.ts  spacetime.test.ts
scripts/: verify_env.py
