[package]
name = "influx-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "influx_backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.46"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
chacha20poly1305 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
futures = "0.3"

[dev-dependencies]
cargo-tarpaulin = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

