[package]
name = "influx-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "influx_backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.46"
scylla = { version = "0.9" }
uuid = { version = "1.0", features = ["v4"] }
chacha20poly1305 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
futures = "0.3"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.1"
base64 = "0.22"

[dev-dependencies]
cargo-tarpaulin = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["full"] }
http = "1.1"
axum-test = "14.0"

