[package]
name = "influx-backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
spacetimedb = "0.10"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
base64 = "0.22"
rand = "0.8"

[features]
test-env = []

[dev-dependencies]
cargo-tarpaulin = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["full"] }
http = "1.1"
axum-test = "14.0"

